{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 833,
  "lineage": "86e2772f-03ef-639a-d826-40b8e94f31d9",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:566776836280:vpc/vpc-2667b35c",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-7f4dec13",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-5a90e121",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-2667b35c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-37693a48",
            "owner_id": "566776836280",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-056ca41aa50beb88d",
            "arn": "arn:aws:ec2:us-east-1:566776836280:elastic-ip/eipalloc-056ca41aa50beb88d",
            "association_id": "eipassoc-0b3edb42c40d1649c",
            "domain": "vpc",
            "id": "eipalloc-056ca41aa50beb88d",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07903d82d3fe5359b",
            "private_dns": "ip-10-1-12-11.ec2.internal",
            "private_ip": "10.1.12.11",
            "public_dns": "ec2-52-2-102-116.compute-1.amazonaws.com",
            "public_ip": "52.2.102.116",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Env": "dev",
              "Name": "mc-multichat-dev-nat-eip-us-east-1a",
              "Project": "mc-multichat"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "mc-multichat-dev-nat-eip-us-east-1a",
              "Project": "mc-multichat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-019ebe9a4cd613034",
            "arn": "arn:aws:ec2:us-east-1:566776836280:instance/i-05f370a9cece42006",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "mc-multichat-dev-bastion-prof",
            "id": "i-05f370a9cece42006",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-03fb1159b31230c12"
              }
            ],
            "primary_network_interface_id": "eni-03fb1159b31230c12",
            "private_dns": "ip-10-1-3-243.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.3.243",
            "public_dns": "ec2-54-92-215-163.compute-1.amazonaws.com",
            "public_ip": "54.92.215.163",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e26fc629e8796ad7",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d264e8bed41f1678",
            "tags": {
              "Env": "dev",
              "Name": "mc-multichat-dev-bastion",
              "Project": "mc-multichat"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "mc-multichat-dev-bastion",
              "Project": "mc-multichat"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01700b5624a04e95e"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.bastion",
            "aws_iam_role.bastion",
            "aws_security_group.bastion",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux_2023",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:566776836280:internet-gateway/igw-001d0bff6cfa5703e",
            "id": "igw-001d0bff6cfa5703e",
            "owner_id": "566776836280",
            "region": "us-east-1",
            "tags": {
              "Env": "dev",
              "Name": "mc-multichat-dev-igw",
              "Project": "mc-multichat"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "mc-multichat-dev-igw",
              "Project": "mc-multichat"
            },
            "vpc_id": "vpc-0c1c07b89c8b8d2cb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-056ca41aa50beb88d",
            "association_id": "eipassoc-0b3edb42c40d1649c",
            "connectivity_type": "public",
            "id": "nat-05b3c51d0172076b6",
            "network_interface_id": "eni-07903d82d3fe5359b",
            "private_ip": "10.1.12.11",
            "public_ip": "52.2.102.116",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d264e8bed41f1678",
            "tags": {
              "Env": "dev",
              "Name": "mc-multichat-dev-nat-us-east-1a",
              "Project": "mc-multichat"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "mc-multichat-dev-nat-us-east-1a",
              "Project": "mc-multichat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:566776836280:route-table/rtb-06ed2f8066fe9cfb3",
            "id": "rtb-06ed2f8066fe9cfb3",
            "owner_id": "566776836280",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05b3c51d0172076b6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "mc-multichat-dev-rt-private-us-east-1a",
              "Project": "mc-multichat"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "mc-multichat-dev-rt-private-us-east-1a",
              "Project": "mc-multichat"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1c07b89c8b8d2cb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:566776836280:route-table/rtb-0701d2e332159a354",
            "id": "rtb-0701d2e332159a354",
            "owner_id": "566776836280",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05b3c51d0172076b6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "mc-multichat-dev-rt-private-us-east-1b",
              "Project": "mc-multichat"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "mc-multichat-dev-rt-private-us-east-1b",
              "Project": "mc-multichat"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1c07b89c8b8d2cb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:566776836280:route-table/rtb-0a41072fb7ac9f6cc",
            "id": "rtb-0a41072fb7ac9f6cc",
            "owner_id": "566776836280",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05b3c51d0172076b6",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "mc-multichat-dev-rt-private-us-east-1c",
              "Project": "mc-multichat"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "mc-multichat-dev-rt-private-us-east-1c",
              "Project": "mc-multichat"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1c07b89c8b8d2cb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:566776836280:route-table/rtb-0ec567b43d372c0fd",
            "id": "rtb-0ec567b43d372c0fd",
            "owner_id": "566776836280",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-001d0bff6cfa5703e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "mc-multichat-dev-rt-public",
              "Project": "mc-multichat"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "mc-multichat-dev-rt-public",
              "Project": "mc-multichat"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1c07b89c8b8d2cb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dfe766f12fef446b",
            "region": "us-east-1",
            "route_table_id": "rtb-06ed2f8066fe9cfb3",
            "subnet_id": "subnet-0c30c51c22e89ecda"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0547361d6586ad720",
            "region": "us-east-1",
            "route_table_id": "rtb-0701d2e332159a354",
            "subnet_id": "subnet-08b6ea3ca135f9b51"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4db1bc0e825a4de",
            "region": "us-east-1",
            "route_table_id": "rtb-0a41072fb7ac9f6cc",
            "subnet_id": "subnet-0efce1ff901f3200d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3590ef259adf722",
            "region": "us-east-1",
            "route_table_id": "rtb-0ec567b43d372c0fd",
            "subnet_id": "subnet-0d264e8bed41f1678"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0029c1d3b3b38275c",
            "region": "us-east-1",
            "route_table_id": "rtb-0ec567b43d372c0fd",
            "subnet_id": "subnet-0bc14758bab58bf85"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d247857d904a3d9",
            "region": "us-east-1",
            "route_table_id": "rtb-0ec567b43d372c0fd",
            "subnet_id": "subnet-0d5bdfbceb8122309"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:566776836280:security-group/sg-01700b5624a04e95e",
            "description": "Bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01700b5624a04e95e",
            "ingress": [],
            "name": "mc-multichat-dev-sg-bastion",
            "name_prefix": "",
            "owner_id": "566776836280",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Project": "mc-multichat"
            },
            "tags_all": {
              "Env": "dev",
              "Project": "mc-multichat"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1c07b89c8b8d2cb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "566776836280",
            "id": "sg-01700b5624a04e95e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:566776836280:security-group/sg-0b3995a8457a3047c",
            "description": "Interface endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b3995a8457a3047c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.1.128.0/20",
                  "10.1.144.0/20",
                  "10.1.160.0/20",
                  "10.1.0.0/20",
                  "10.1.16.0/20",
                  "10.1.32.0/20"
                ],
                "description": "From private subnets",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "mc-multichat-dev-sg-vpce",
            "name_prefix": "",
            "owner_id": "566776836280",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Project": "mc-multichat"
            },
            "tags_all": {
              "Env": "dev",
              "Project": "mc-multichat"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1c07b89c8b8d2cb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "566776836280",
            "id": "sg-0b3995a8457a3047c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lambda",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:566776836280:security-group/sg-01378b2383be6b1af",
            "description": "Lambda to RDS/endpoints/NAT",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01378b2383be6b1af",
            "ingress": [],
            "name": "mc-multichat-dev-sg-lambda",
            "name_prefix": "",
            "owner_id": "566776836280",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Project": "mc-multichat"
            },
            "tags_all": {
              "Env": "dev",
              "Project": "mc-multichat"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1c07b89c8b8d2cb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "566776836280",
            "id": "sg-01378b2383be6b1af",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "pg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:566776836280:security-group/sg-0b895c878317ad245",
            "description": "PostgreSQL access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b895c878317ad245",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Postgres",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "mc-multichat-dev-pg-sg",
            "name_prefix": "",
            "owner_id": "566776836280",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Project": "mc-multichat"
            },
            "tags_all": {
              "Env": "dev",
              "Project": "mc-multichat"
            },
            "timeouts": null,
            "vpc_id": "vpc-2667b35c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "566776836280",
            "id": "sg-0b895c878317ad245",
            "region": "us-east-1"
          },
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:566776836280:security-group/sg-09a766a177fe33ff2",
            "description": "Postgres access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09a766a177fe33ff2",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01378b2383be6b1af"
                ],
                "self": false,
                "to_port": 5432
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01700b5624a04e95e"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "mc-multichat-dev-sg-rds-20251228230850895300000002",
            "name_prefix": "mc-multichat-dev-sg-rds-",
            "owner_id": "566776836280",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Project": "mc-multichat"
            },
            "tags_all": {
              "Env": "dev",
              "Project": "mc-multichat"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1c07b89c8b8d2cb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "566776836280",
            "id": "sg-09a766a177fe33ff2",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bastion",
            "aws_security_group.lambda",
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:566776836280:subnet/subnet-0c30c51c22e89ecda",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c30c51c22e89ecda",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "566776836280",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Env": "dev",
              "Name": "mc-multichat-dev-private-us-east-1a",
              "Project": "mc-multichat",
              "Tier": "private"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "mc-multichat-dev-private-us-east-1a",
              "Project": "mc-multichat",
              "Tier": "private"
            },
            "vpc_id": "vpc-0c1c07b89c8b8d2cb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "566776836280",
            "id": "subnet-0c30c51c22e89ecda",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:566776836280:subnet/subnet-08b6ea3ca135f9b51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b6ea3ca135f9b51",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "566776836280",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Env": "dev",
              "Name": "mc-multichat-dev-private-us-east-1b",
              "Project": "mc-multichat",
              "Tier": "private"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "mc-multichat-dev-private-us-east-1b",
              "Project": "mc-multichat",
              "Tier": "private"
            },
            "vpc_id": "vpc-0c1c07b89c8b8d2cb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "566776836280",
            "id": "subnet-08b6ea3ca135f9b51",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:566776836280:subnet/subnet-0efce1ff901f3200d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.160.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0efce1ff901f3200d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "566776836280",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Env": "dev",
              "Name": "mc-multichat-dev-private-us-east-1c",
              "Project": "mc-multichat",
              "Tier": "private"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "mc-multichat-dev-private-us-east-1c",
              "Project": "mc-multichat",
              "Tier": "private"
            },
            "vpc_id": "vpc-0c1c07b89c8b8d2cb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "566776836280",
            "id": "subnet-0efce1ff901f3200d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:566776836280:subnet/subnet-0d264e8bed41f1678",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.1.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d264e8bed41f1678",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "566776836280",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Env": "dev",
              "Name": "mc-multichat-dev-public-us-east-1a",
              "Project": "mc-multichat",
              "Tier": "public"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "mc-multichat-dev-public-us-east-1a",
              "Project": "mc-multichat",
              "Tier": "public"
            },
            "vpc_id": "vpc-0c1c07b89c8b8d2cb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "566776836280",
            "id": "subnet-0d264e8bed41f1678",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1b",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:566776836280:subnet/subnet-0bc14758bab58bf85",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.1.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc14758bab58bf85",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "566776836280",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Env": "dev",
              "Name": "mc-multichat-dev-public-us-east-1b",
              "Project": "mc-multichat",
              "Tier": "public"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "mc-multichat-dev-public-us-east-1b",
              "Project": "mc-multichat",
              "Tier": "public"
            },
            "vpc_id": "vpc-0c1c07b89c8b8d2cb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "566776836280",
            "id": "subnet-0bc14758bab58bf85",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:566776836280:subnet/subnet-0d5bdfbceb8122309",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d5bdfbceb8122309",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "566776836280",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Env": "dev",
              "Name": "mc-multichat-dev-public-us-east-1c",
              "Project": "mc-multichat",
              "Tier": "public"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "mc-multichat-dev-public-us-east-1c",
              "Project": "mc-multichat",
              "Tier": "public"
            },
            "vpc_id": "vpc-0c1c07b89c8b8d2cb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "566776836280",
            "id": "subnet-0d5bdfbceb8122309",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:566776836280:vpc/vpc-0c1c07b89c8b8d2cb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0022a16129803c395",
            "default_route_table_id": "rtb-0cb890943c3fa4272",
            "default_security_group_id": "sg-0c1f11280a650a1e5",
            "dhcp_options_id": "dopt-5a90e121",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c1c07b89c8b8d2cb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cb890943c3fa4272",
            "owner_id": "566776836280",
            "region": "us-east-1",
            "tags": {
              "Env": "dev",
              "Name": "mc-multichat-dev-vpc",
              "Project": "mc-multichat"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "mc-multichat-dev-vpc",
              "Project": "mc-multichat"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:566776836280:vpc-endpoint/vpce-04e0ba605fdd23ba7",
            "cidr_blocks": [
              "35.71.70.0/24",
              "3.218.182.0/24",
              "3.218.180.0/23",
              "35.71.68.0/23",
              "52.94.0.0/22",
              "52.119.224.0/20"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-04e0ba605fdd23ba7",
            "ip_address_type": "ipv4",
            "owner_id": "566776836280",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-02cd2c6b",
            "private_dns_enabled": false,
            "region": "us-east-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-06ed2f8066fe9cfb3",
              "rtb-0701d2e332159a354",
              "rtb-0a41072fb7ac9f6cc"
            ],
            "service_name": "com.amazonaws.us-east-1.dynamodb",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Env": "dev",
              "Name": "mc-multichat-dev-vpce-dynamodb",
              "Project": "mc-multichat"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "mc-multichat-dev-vpce-dynamodb",
              "Project": "mc-multichat"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0c1c07b89c8b8d2cb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "iface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ec2messages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:566776836280:vpc-endpoint/vpce-0e79bbcff929bfa34",
            "dns_entry": [
              {
                "dns_name": "vpce-0e79bbcff929bfa34-vvq5bzw8.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e79bbcff929bfa34-vvq5bzw8-us-east-1a.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e79bbcff929bfa34-vvq5bzw8-us-east-1c.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e79bbcff929bfa34-vvq5bzw8-us-east-1b.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2messages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z08244642GTAODCATSQGH"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e79bbcff929bfa34",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-04f4b3d9a98231838",
              "eni-078aac2b7cf9c0cdb",
              "eni-0d6e1ee3a73948c09"
            ],
            "owner_id": "566776836280",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0b3995a8457a3047c"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2messages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.1.139.215",
                "subnet_id": "subnet-0c30c51c22e89ecda"
              },
              {
                "ipv4": "10.1.147.80",
                "subnet_id": "subnet-08b6ea3ca135f9b51"
              },
              {
                "ipv4": "10.1.164.80",
                "subnet_id": "subnet-0efce1ff901f3200d"
              }
            ],
            "subnet_ids": [
              "subnet-08b6ea3ca135f9b51",
              "subnet-0c30c51c22e89ecda",
              "subnet-0efce1ff901f3200d"
            ],
            "tags": {
              "Env": "dev",
              "Name": "mc-multichat-dev-vpce-ec2messages",
              "Project": "mc-multichat"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "mc-multichat-dev-vpce-ec2messages",
              "Project": "mc-multichat"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0c1c07b89c8b8d2cb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.endpoints",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "logs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:566776836280:vpc-endpoint/vpce-034fadbf00ab07ffa",
            "dns_entry": [
              {
                "dns_name": "vpce-034fadbf00ab07ffa-lsdd6o22.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-034fadbf00ab07ffa-lsdd6o22-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-034fadbf00ab07ffa-lsdd6o22-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-034fadbf00ab07ffa-lsdd6o22-us-east-1c.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z08599851RHZ1HOB2R5SR"
              },
              {
                "dns_name": "streaming-logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z03083173FY9WHFBF0VLC"
              },
              {
                "dns_name": "streaming-logs.us-east-1.api.aws",
                "hosted_zone_id": "Z08524151D2MFVR6058AP"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z08524122GZCR773ZZX79"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-034fadbf00ab07ffa",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-011950bac941d3ec1",
              "eni-01d88c9c3b6a3e98b",
              "eni-09716dc07e1929ac1"
            ],
            "owner_id": "566776836280",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0b3995a8457a3047c"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.1.143.178",
                "subnet_id": "subnet-0c30c51c22e89ecda"
              },
              {
                "ipv4": "10.1.149.159",
                "subnet_id": "subnet-08b6ea3ca135f9b51"
              },
              {
                "ipv4": "10.1.167.52",
                "subnet_id": "subnet-0efce1ff901f3200d"
              }
            ],
            "subnet_ids": [
              "subnet-08b6ea3ca135f9b51",
              "subnet-0c30c51c22e89ecda",
              "subnet-0efce1ff901f3200d"
            ],
            "tags": {
              "Env": "dev",
              "Name": "mc-multichat-dev-vpce-logs",
              "Project": "mc-multichat"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "mc-multichat-dev-vpce-logs",
              "Project": "mc-multichat"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0c1c07b89c8b8d2cb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.endpoints",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "secretsmanager",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:566776836280:vpc-endpoint/vpce-0c076d8edefec866b",
            "dns_entry": [
              {
                "dns_name": "vpce-0c076d8edefec866b-mdw0svhf.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0c076d8edefec866b-mdw0svhf-us-east-1a.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0c076d8edefec866b-mdw0svhf-us-east-1c.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0c076d8edefec866b-mdw0svhf-us-east-1b.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "secretsmanager.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0222390KJE2F9J4PCMO"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0c076d8edefec866b",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-042a8b771915845bd",
              "eni-0d5002e144d6911cd",
              "eni-0f81f6dc0870c7d8b"
            ],
            "owner_id": "566776836280",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0b3995a8457a3047c"
            ],
            "service_name": "com.amazonaws.us-east-1.secretsmanager",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.1.138.12",
                "subnet_id": "subnet-0c30c51c22e89ecda"
              },
              {
                "ipv4": "10.1.157.93",
                "subnet_id": "subnet-08b6ea3ca135f9b51"
              },
              {
                "ipv4": "10.1.160.169",
                "subnet_id": "subnet-0efce1ff901f3200d"
              }
            ],
            "subnet_ids": [
              "subnet-08b6ea3ca135f9b51",
              "subnet-0c30c51c22e89ecda",
              "subnet-0efce1ff901f3200d"
            ],
            "tags": {
              "Env": "dev",
              "Name": "mc-multichat-dev-vpce-secretsmanager",
              "Project": "mc-multichat"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "mc-multichat-dev-vpce-secretsmanager",
              "Project": "mc-multichat"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0c1c07b89c8b8d2cb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.endpoints",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "ssm",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:566776836280:vpc-endpoint/vpce-0a2d43cdea29fe30b",
            "dns_entry": [
              {
                "dns_name": "vpce-0a2d43cdea29fe30b-fd88wcnf.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0a2d43cdea29fe30b-fd88wcnf-us-east-1a.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0a2d43cdea29fe30b-fd88wcnf-us-east-1b.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0a2d43cdea29fe30b-fd88wcnf-us-east-1c.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssm.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0847526B0OFGVSMY4ZR"
              },
              {
                "dns_name": "ssm.us-east-1.api.aws",
                "hosted_zone_id": "Z100039726RPQXGTUBXNV"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0a2d43cdea29fe30b",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0294b2a822c77472f",
              "eni-09b84eb952944d79d",
              "eni-0d61cd8802bbe4069"
            ],
            "owner_id": "566776836280",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0b3995a8457a3047c"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.1.130.51",
                "subnet_id": "subnet-0c30c51c22e89ecda"
              },
              {
                "ipv4": "10.1.151.125",
                "subnet_id": "subnet-08b6ea3ca135f9b51"
              },
              {
                "ipv4": "10.1.162.58",
                "subnet_id": "subnet-0efce1ff901f3200d"
              }
            ],
            "subnet_ids": [
              "subnet-08b6ea3ca135f9b51",
              "subnet-0c30c51c22e89ecda",
              "subnet-0efce1ff901f3200d"
            ],
            "tags": {
              "Env": "dev",
              "Name": "mc-multichat-dev-vpce-ssm",
              "Project": "mc-multichat"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "mc-multichat-dev-vpce-ssm",
              "Project": "mc-multichat"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0c1c07b89c8b8d2cb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.endpoints",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "ssmmessages",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:566776836280:vpc-endpoint/vpce-012c9208b4d616055",
            "dns_entry": [
              {
                "dns_name": "vpce-012c9208b4d616055-o8b2sg5s.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-012c9208b4d616055-o8b2sg5s-us-east-1b.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-012c9208b4d616055-o8b2sg5s-us-east-1c.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-012c9208b4d616055-o8b2sg5s-us-east-1a.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssmmessages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z10052992LLH9TAUCKY2B"
              },
              {
                "dns_name": "ssmmessages.us-east-1.api.aws",
                "hosted_zone_id": "Z04339092SB08KSXSK4OY"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-012c9208b4d616055",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-06034e23f0c83fd87",
              "eni-0803d2bfede4cb446",
              "eni-081ea4930babcda86"
            ],
            "owner_id": "566776836280",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0b3995a8457a3047c"
            ],
            "service_name": "com.amazonaws.us-east-1.ssmmessages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.1.140.118",
                "subnet_id": "subnet-0c30c51c22e89ecda"
              },
              {
                "ipv4": "10.1.151.112",
                "subnet_id": "subnet-08b6ea3ca135f9b51"
              },
              {
                "ipv4": "10.1.165.69",
                "subnet_id": "subnet-0efce1ff901f3200d"
              }
            ],
            "subnet_ids": [
              "subnet-08b6ea3ca135f9b51",
              "subnet-0c30c51c22e89ecda",
              "subnet-0efce1ff901f3200d"
            ],
            "tags": {
              "Env": "dev",
              "Name": "mc-multichat-dev-vpce-ssmmessages",
              "Project": "mc-multichat"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "mc-multichat-dev-vpce-ssmmessages",
              "Project": "mc-multichat"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0c1c07b89c8b8d2cb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.endpoints",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "sts",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:566776836280:vpc-endpoint/vpce-08b9e7ce05daa485a",
            "dns_entry": [
              {
                "dns_name": "vpce-08b9e7ce05daa485a-llojycpe.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-08b9e7ce05daa485a-llojycpe-us-east-1c.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-08b9e7ce05daa485a-llojycpe-us-east-1b.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-08b9e7ce05daa485a-llojycpe-us-east-1a.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "sts.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z08600052KR6OB3MK1BYT"
              },
              {
                "dns_name": "sts.us-east-1.api.aws",
                "hosted_zone_id": "Z01652663AW9GND62HEUS"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-08b9e7ce05daa485a",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0d0ee4e7e9be78af5",
              "eni-0e2027527569803e5",
              "eni-0e579589b7f4f8137"
            ],
            "owner_id": "566776836280",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-0b3995a8457a3047c"
            ],
            "service_name": "com.amazonaws.us-east-1.sts",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.1.140.36",
                "subnet_id": "subnet-0c30c51c22e89ecda"
              },
              {
                "ipv4": "10.1.151.8",
                "subnet_id": "subnet-08b6ea3ca135f9b51"
              },
              {
                "ipv4": "10.1.161.80",
                "subnet_id": "subnet-0efce1ff901f3200d"
              }
            ],
            "subnet_ids": [
              "subnet-08b6ea3ca135f9b51",
              "subnet-0c30c51c22e89ecda",
              "subnet-0efce1ff901f3200d"
            ],
            "tags": {
              "Env": "dev",
              "Name": "mc-multichat-dev-vpce-sts",
              "Project": "mc-multichat"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "mc-multichat-dev-vpce-sts",
              "Project": "mc-multichat"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0c1c07b89c8b8d2cb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.endpoints",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:566776836280:vpc-endpoint/vpce-0ba864758ab22649b",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0ba864758ab22649b",
            "ip_address_type": "ipv4",
            "owner_id": "566776836280",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "region": "us-east-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-06ed2f8066fe9cfb3",
              "rtb-0701d2e332159a354",
              "rtb-0a41072fb7ac9f6cc"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Env": "dev",
              "Name": "mc-multichat-dev-vpce-s3",
              "Project": "mc-multichat"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "mc-multichat-dev-vpce-s3",
              "Project": "mc-multichat"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0c1c07b89c8b8d2cb"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    }
  ]
}